# log-sheriff

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
include/log_sheriff/: summarizer.hpp
src/: main.cpp  summarizer.cpp
tests/: summarizer_tests.cpp
